# code-trip

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.claude/skills/accept-invite/: SKILL.md
docs/: async-migration-plan.md  code-quality-review.md  task-queue-brief.md  task-queue-design.md  voice-driven-claude-design.md
scripts/: diagnose_macropad.py  run_orchestrator.py  setup-stop-hook.sh  test_stt.py  test_tts.py
src/code_trip/: audio_recorder.py  browse.py  config.py  earcon.py  intent_classifier.py  keypad.py  mode_fsm.py  orchestrator.py  push_to_talk.py  remote_tmux.py  review.py  ship.py  stt_client.py  summarizer.py  tts_client.py  work.py
src/code_trip2/: _async_utils.py  audio.py  audio_out.py  chords.py  config.py  dispatch.py  earcon.py  email_state.py  input_buffer.py  linear_state.py  macropad.py  main.py  modes.py  queue_log.py  remote.py  screener.py  session_log.py  skills.py  slack_filter.py  slack_state.py  stt_client.py  summarizer.py  tasks.py  tts_client.py  tui.py  window.py
tests/: conftest.py  test_audio_recorder.py  test_browse.py  test_config.py  test_dispatch.py  test_earcon.py  test_email.py  test_input_buffer.py  test_intent_classifier.py  test_keypad.py  test_linear.py  test_macropad.py  test_mcp_batch.py  test_mode_fsm.py  test_modes.py  test_orchestrator.py  test_push_to_talk.py  test_queue_log.py  test_remote_tmux.py  test_review.py  test_screener.py  test_ship.py  test_skills.py  test_slack.py  test_stt_client.py  test_summarizer.py  test_tasks.py  test_tts_client.py  test_tui.py  test_work.py
(+16 files in other folders)
