[project]
name = "code-trip"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.5",
    "numpy>=1.24",
    "pynput>=1.7",
    "openai>=1.0",
    "rich>=13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
